        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.21 vanilla (kernel.org)
       * Recommended e2fsprogs version: 1.40.11-sun1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
        removed cwd "./" (refer to Bugzilla 14399).

Severity   : enhancement
Bugzilla   : 16633
Description: Update to RHEL5 kernel-2.6.18-92.1.10.el5.

Severity   : enhancement
Bugzilla   : 16547
Description: Update to SLES10 SP2 kernel-2.6.16.60-0.27.

Severity   : enhancement
Bugzilla   : 16566
Description: Upcall on Lustre log has been dumped
Details    : Allow for a user mode script to be called once a Lustre log has
             been dumped. It passes the filename of the dumped log to the
	     script, the location of the script can be specified via
	     /proc/sys/lnet/debug_log_upcall.

Severity   : minor
Bugzilla   : 16583
Frequency  : rare
Description: avoid messages about idr_remove called for id  which is not allocated.
Details    : Move assigment s_dev for clustered nfs to end of initialization, for
             avoid problem with error handling.

Severity   : minor
Bugzilla   : 16109
Frequency  : rare
Description: avoid Already found the key in hash [CONN_UNUSED_HASH] messages
Details    : When connection is reused this not moved from CONN_UNUSED_HASH into
             CONN_USED_HASH and this prodice warning when put connection again
             in unused hash.

Severity   : enhancement
Bugzilla   : 16573
Description: Export bytes_read/bytes_write count on OSC/OST.

Severity   : normal
Bugzilla   : 16237
Description: Early reply size mismatch, MGC loses connection
Details    : Apply the MGS_CONNECT_SUPPORTED mask at reconnect time so
             the connect flags are properly negotiated.

Severity   : normal
Bugzilla   : 16006
Description: Properly propagate oinfo flags from lov to osc for statfs